# secure-graph-mcp

./: .gitignore  LICENSE  README.md  cursor-user-rule-secure-graph.md  pyproject.toml
.github/workflows/: publish-pypi.yml
scripts/: install_cursor_bundle.py  one_command_install.sh
src/secure_graph_mcp/: __init__.py  cursor_memory_hook.py  demo.py  embeddings.py  graph_viewer.py  ingestion.py  install_cursor_bundle.py  mcp_server.py  policy.py  schema.py  storage.py  verify_cursor_setup.py
src/secure_graph_mcp/viewer_static/: index.html  viewer.css  viewer.js
tests/: test_install_cursor_bundle.py  test_storage.py  test_verify_cursor_setup.py  test_visual_graph.py
